@@ -1,0 +1,9 @@
+// Origin PR c++/51476
+// { dg-options "-std=c++11" }
+
+template<int> struct A {};                                                               
+struct B
+{
+    int i;
+    A<&B::i> a; // { dg-error "could not convert template argument" }
+};
