@@ -1,3 +1,8 @@
+2011-12-14  Dodji Seketeli  <dodji@redhat.com>
+
+	PR c++/51476
+	* g++.dg/cpp0x/ptrmem-cst-arg1.C: New test.
+
 2011-12-13  Jason Merrill  <jason@redhat.com>
 
 	PR c++/51406
